welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:1: error: Missing closing brace `}' assumed here
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
^countTeen:2: error: Missing closing brace `}' assumed here
var NbB : x=0
^countTeen:4: error: expected class or object definition
	if (a>=13 && a<=19) {
        ^countTeen:7: error: Missing closing brace `}' assumed here
	if (b>=13 && b<=19) {
        ^countTeen:10: error: Missing closing brace `}' assumed here
	if (c>=13 && c<=19) {
        ^